# bazel-build-library

./: LICENSE  README.md
glad/: MODULE.bazel  README.md
glfw/: .gitignore  MODULE.bazel  README.md  glfw-win64.BUILD  glfw.BUILD.bazel
glfw/examples/: BUILD  glfw-window.cc
