module(name = "glfw-bazel")

bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "platforms", version = "1.0.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "glfw",
    build_file = "@glfw-bazel//:glfw.BUILD.bazel",
    sha256 = "b5ec004b2712fd08e8861dc271428f048775200a2df719ccf575143ba749a3e9",
    strip_prefix = "glfw-3.4",
    urls = ["https://github.com/glfw/glfw/releases/download/3.4/glfw-3.4.zip"],
)

http_archive(
    name = "glfw-prebuilt-win64",
    build_file = "@glfw-bazel//:glfw-win64.BUILD",
    sha256 = "54efa829400f2a0537f742b2b3bdd74e437bb4f2f048e4b7d3c5557d11a611e6",
    strip_prefix = "glfw-3.4.bin.WIN64",
    urls = ["https://github.com/glfw/glfw/releases/download/3.4/glfw-3.4.bin.WIN64.zip"],
)
